add hire to hr-service, need to friendship with worker service
