# Lab1/HR-Service/src/main/java/com/soa/hrservice/controller/HRController.java
@@ -3,10 +3,12 @@ package com.soa.hrservice.controller;
 import com.soa.hrservice.service.WorkerRequestService;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.DELETE;
+import jakarta.ws.rs.POST;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.PathParam;
 import jakarta.ws.rs.core.Response;
 
+import java.util.Date;
 import java.util.UUID;
 
 
@@ -31,12 +33,29 @@ public class HRController {
                     .build();
         }
         String out = workerRequestService.fireWorker(uuid);
-//        Worker worker = workerService.getWorker(uuid);
-//        if (worker == null) {
-//            return null;
-//        }
         return Response
                 .ok()
+                .entity(out)
+                .build();
+    }
+
+    @POST
+    @Path("hire/{person-id}/{position}/{start-date}")
+    public Response hirePerson(@PathParam("person-id") String personId,
+                               @PathParam("position") String position,
+                               @PathParam("start-date") String startDate) {
+        try {
+            UUID.fromString(personId);
+        } catch (IllegalArgumentException e) {
+            e.printStackTrace();
+            return Response.status(400)
+                    .entity("Invalid parameters supplied,\n" +
+                            "person-id is uncorrected, change id and retry x")
+                    .build();
+        }
+        System.out.println("1");
+        String out = workerRequestService.hirePerson(personId, position, startDate);
+        return Response.ok()
                 .entity(out)
                 .build();
     }
